# FightersParadise

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  test-assets
.github/workflows/: ci.yml
assets/data/: common1.cns  fightfx.air  fightfx.sff  font.fnt  select.def  system.def
assets/data/tutorial/: antiair.def  block.def  combo.def  fireball.def  throw.def  tutorial.def
assets/trainingdummy/: trainingdummy.air  trainingdummy.cmd  trainingdummy.cns  trainingdummy.def  trainingdummy.sff  trainingdummy.snd
crates/fp-app/: Cargo.toml
crates/fp-app/src/: import.rs  main.rs  screens.rs  validate.rs
crates/fp-app/src/training/: mod.rs  tutorial.rs
crates/fp-app/tests/: freeze_probe.rs  training_dummy.rs
crates/fp-audio/: Cargo.toml
crates/fp-audio/src/: lib.rs  sound.rs  system.rs
crates/fp-character/: Cargo.toml
crates/fp-character/src/: combat.rs  executor.rs  framedata.rs  identity.rs  invuln.rs  ir_cache.rs  lib.rs  loader.rs  movelist.rs  snapshot.rs
crates/fp-character/tests/: serde_roundtrip.rs
crates/fp-combat/: Cargo.toml
crates/fp-combat/src/: lib.rs
crates/fp-core/: Cargo.toml
crates/fp-core/src/: error.rs  lib.rs  math.rs  types.rs
crates/fp-engine/: Cargo.toml
crates/fp-engine/src/: dummy.rs  lib.rs  record.rs  replay.rs  snapshot.rs  team.rs
crates/fp-engine/tests/: determinism.rs  kfm_replay.rs  replay_player.rs  rollback.rs  training_record.rs
crates/fp-formats/: Cargo.toml
crates/fp-formats/src/: act.rs  air.rs  cmd.rs  cns.rs  def.rs  fnt.rs  lib.rs  snd.rs  text.rs
crates/fp-formats/src/sff/: compression.rs  header.rs  mod.rs  palette.rs  sprite.rs  v1.rs
crates/fp-formats/tests/: fightfx_asset.rs  hud_font_asset.rs  real_content.rs  rle5_real_content.rs  serde_roundtrip.rs
crates/fp-input/: Cargo.toml
crates/fp-input/src/: ai.rs  buffer.rs  command.rs  controller.rs  display.rs  lib.rs  state.rs  synth.rs
crates/fp-input/tests/: real_kfm_cmd.rs
crates/fp-physics/: Cargo.toml
crates/fp-physics/src/: collision.rs  lib.rs  push.rs
crates/fp-render/: Cargo.toml
crates/fp-render/src/: afterimage.rs  animation.rs  atlas.rs  lib.rs  params.rs  renderer.rs  text.rs  texture.rs  vertex.rs
crates/fp-render/src/shaders/: debug.wgsl  image.wgsl  palette.wgsl
crates/fp-stage/: Cargo.toml
crates/fp-stage/src/: lib.rs
crates/fp-storyboard/: Cargo.toml
crates/fp-storyboard/src/: lib.rs  player.rs  storyboard.rs
crates/fp-storyboard/tests/: real_fixtures.rs
crates/fp-ui/: Cargo.toml
crates/fp-ui/src/: discovery.rs  hud_config.rs  lib.rs  renderer.rs  resource_state.rs  screenpack.rs  select_def.rs  system_def.rs
crates/fp-ui/tests/: motif_fixtures.rs
crates/fp-vm/: Cargo.toml
crates/fp-vm/src/: eval.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  triggers.rs
crates/fp-vm/tests/: cns_integration.rs  proptest_fuzz.rs  serde_roundtrip.rs
docs/: architecture.md  content-guide.md  development.md  known-issues.md  mugen-compatibility.md  roadmap-task-backlog.md  roadmap.md
docs/format-specs/: sff-v2.md
docs/handoffs/: 2026-06-14-engine-merge-and-docs.md  2026-06-14-p-items-complete.md  2026-06-15-forward-looking-and-menu.md  2026-06-15-mugen-parity-autonomous-run.md  2026-06-15-orphan-recovery-and-evilken-debug.md  2026-06-15-rendering-fighters-and-backgrounds.md  2026-06-15-session-handoff-and-learnings.md  2026-06-15-v1.0-autonomous-run.md  2026-06-16-overnight-fixes-harness-and-roadmap.md  2026-06-17-multi-agent-factory-37-tasks-and-t051-fixes.md
docs/knowledge-base/: 01-mugen-overview.md  02-character-ecosystem.md  03-engine-architecture.md  04-codebase-review.md  05-reimplementation-roadmap.md  06-execution-plan.md  07-evaluator-semantics.md  08-faithfulness-audit.md  2026-06-16-behavioral-test-harness.md  2026-06-16-content-import-pipeline.md  2026-06-16-game-engines-for-2d-fighting-games.md  2026-06-16-mugen-mechanics-reference.md  2026-06-16-player-expectations-product-deep-dive.md  README.md
scripts/: fp.sh  visual_capture.sh
