[package]
name = "fp-core"
description = "Core types, math primitives, and error handling for Fighters Paradise"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
# Runtime-state serialization (#38): `Vec2` and `Rect` flow into the Match
# snapshot / replay log, so they derive Serialize/Deserialize.
serde.workspace = true
