[package]
name = "fp-formats"
description = "MUGEN file format parsers (SFF, AIR, CNS, CMD, DEF, SND, FNT)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fp-core.workspace = true
nom.workspace = true
png.workspace = true
tracing.workspace = true
thiserror.workspace = true
encoding_rs.workspace = true

[dev-dependencies]
# Used by tests/real_content.rs to synthesize an SFF v2 PNG8 sprite end to end.
png.workspace = true
